<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical" >
        
        <TextView
            android:id="@+id/textViewTankControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:text="@string/text_TankControl" />
        
        <Button
            android:id="@+id/moveLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/moveForward"
            android:text="@string/str_btn_moveLeft" />

        <Button
            android:id="@+id/moveRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/moveLeft"
            android:layout_toRightOf="@+id/moveLeft"
            android:text="@string/str_btn_moveRight" />

        <Button
            android:id="@+id/moveForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_below="@+id/textViewTankControl"
            android:layout_centerHorizontal="true"
            android:text="@string/str_btn_moveForward" />

        <Button
            android:id="@+id/moveBackward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/moveLeft"
            android:layout_centerHorizontal="true"
            android:text="@string/str_btn_moveBackward" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Vid"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:drawable/editbox_background" >
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true" >

        
        <TextView
            android:id="@+id/textViewCamControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:text="@string/text_CamControl" />
        
        <Button
            android:id="@+id/moveCamUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_below="@+id/textViewCamControl"
            android:layout_centerHorizontal="true"
            android:text="@string/str_btn_moveCamUp" />

        <Button
            android:id="@+id/moveCamLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/moveCamUp"
            android:text="@string/str_btn_moveCamLeft" />

        <Button
            android:id="@+id/moveCamRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/moveCamLeft"
            android:layout_toRightOf="@+id/moveCamLeft"
            android:text="@string/str_btn_moveCamRight" />

        <Button
            android:id="@+id/moveCamDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/moveCamRight"
            android:layout_centerHorizontal="true"
            android:text="@string/str_btn_moveCamDown" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textViewCmdSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:textSize="8sp" />

</RelativeLayout>